jupiter fixes